src/localpen/assets/localpen.css
html,
body,
#container,
#toolbar,
#editor-container,
#editors,
#editors > div,
#result,
#result iframe,
#select-editor,
#select-editor > ul,
li.editor-title {
  margin: 0;
  padding: 0;
}

html,
body {
  display: flex;
  justify-content: center;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: 1em;
  height: 100%;
  width: 100%;
}
.centered {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}
#container {
  position: relative;
  height: 100%;
  width: 100%;
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

#toolbar {
  display: flex;
  height: 40px;
  width: 100%;
  border-bottom: 3px solid #444857;
  position: relative;
  background: #001b25;
  color: #eeeeee;
}

#toolbar #project-title {
  width: 30%;
  height: 100%;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  margin-left: 10px;
}
#toolbar #project-title.unsaved::after {
  content: ' *';
  white-space: pre;
  margin: 5px;
}
#toolbar #project-title.unsaved::before {
  content: '* ';
  white-space: pre;
  margin: 5px;
  visibility: hidden;
}
@media only screen and (max-width: 1080) {
  .dropdown-menu {
    font-size: 0.9em;
  }
  #toolbar #project-title {
    margin: 0;
  }
}
@media only screen and (max-width: 768px) {
  #toolbar #project-title {
    display: none;
  }
  #toolbar #select-editor {
    width: calc(80% - 70px);
  }
  #logo {
    margin: 3px 5px;
  }
  .dropdown-menu {
    font-size: 0.8em;
  }
}

@media only screen and (max-width: 480px) {
  #toolbar {
    font-size: 0.8em;
  }
  #toolbar #run-button {
    display: none;
  }
  #editors #code-run-button {
    display: block !important;
  }
}

#toolbar #buttons {
  position: absolute;
  right: 0;
  top: 0;
  width: 20%;
  height: 100%;
  display: flex;
}

#buttons > button,
#editors #code-run-button {
  display: block;
  border: 0;
  margin: auto;
  margin-top: 3px;
  width: 50px;
  height: 35px;
  border-radius: 3px;
  background-color: #5a6074da;
  cursor: pointer;
  outline: none;
}

#buttons > button:hover,
#editors #code-run-button:hover {
  background-color: #777c8dda;
}

/* mouse down */
#buttons > button:active:hover,
#editors #code-run-button:active:hover {
  background-color: #5a6074da;
}

#buttons > button img,
#editors #code-run-button img {
  display: block;
  margin: auto;
}
#editors #code-run-button {
  display: none;
  position: absolute;
  bottom: 10px;
  right: 10px;
  opacity: 0.8;
}

#editor-container {
  display: flex;
  flex-direction: row;
  height: calc(100% - 40px);
}

#editors {
  background: #1e1e1e;
  height: 100%;
  resize: both;
  top: 0;
  overflow: hidden;
  position: relative;
}

#editors > div {
  height: 100%;
  width: 100%;
  resize: vertical;
  position: relative;
}

.copy-button {
  display: none;
  position: absolute;
  top: 5px;
  right: 20px;
  padding: 5px;
  border: 0;
  border-radius: 3px;
  z-index: 900;
  background-color: #444855b0;
  color: #eeeeee;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: 0.9em;
  cursor: pointer;
  outline: none;
}
#editors > div:hover .copy-button {
  display: unset;
}
#output {
  height: 100%;
  overflow: hidden;
}
#result {
  resize: both;
  max-height: calc(100% - 30px);
}
#result iframe {
  height: 100%;
  width: 100%;
  border: 0;
}
#tools-pane-bar {
  justify-content: space-between;
  color: #eeeeee;
  font-size: 12px;
  overflow: hidden;
}
#tools-pane-titles {
  display: flex;
  justify-content: start;
  height: 100%;
}
.tools-pane-title {
  cursor: pointer;
  background-color: #5c616e;
  margin-right: 2px;
  border-bottom: 3px solid #5c616e;
  padding: 0 20px;
  display: flex;
  align-items: center;
  justify-content: center;
}
.tools-pane-title.active {
  border-bottom: 3px solid rgb(64, 169, 243);
}
#tools-pane-buttons {
  min-width: 92px;
  text-align: right;
}
#tools-pane-buttons,
#tools-pane-buttons > div {
  white-space: nowrap;
}
#tools-pane > div {
  display: flex;
  flex-direction: column;
  height: 0; /* (display: none) disables console logs when inactive */
}
#tools-pane > div.active {
  height: 100%;
}
#console {
  overflow: auto;
  background-color: #efefef;
}
#console .luna-object-viewer {
  overflow: hidden;
}
#console .luna-console-error {
  z-index: 40;
}
#console .luna-console-input pre.luna-console-code {
  visibility: hidden;
}
#console .luna-console-input pre.luna-console-code.visible {
  visibility: visible;
}
#console-input-indicator {
  color: rgb(64, 169, 243);
  padding-top: 2px;
}
#compiled-code {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
}
.gutter.gutter-vertical {
  cursor: ns-resize;
}

.gutter.gutter-horizontal {
  cursor: ew-resize;
}

.gutter {
  background-color: #444857;
  display: flex !important;
  justify-content: center;
  align-items: center;
  position: relative;
}

.gutter #handle {
  width: 4px;
  height: 30px;
  border-radius: 2px;
  background-color: #e7e8f1;
}
#editor-container .gutter #size-label {
  opacity: 0;
  transition: opacity 0.1s;
  position: absolute;
  top: 5px !important;
  left: 15px !important;
  white-space: nowrap;
  background-color: #eeeeee;
  font-size: 0.7em;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  padding: 2px;
  border-radius: 5px;
  border: 1px solid #5c616e;
}
#editor-container .gutter #size-label.visible {
  opacity: 100%;
  transition: opacity 0.1s;
}

#logo {
  width: 50px;
  margin: 3px 10px;
  padding: 0;
}

#logo a {
  text-decoration: none;
}

#select-editor {
  position: relative;
  color: #eeeeee;
  margin: 0;
  height: 100%;
  width: calc(50% - 70px);
}
#select-editor > ul {
  margin: 0;
  width: 100%;
  height: 40px;
  margin-top: 3px;
  display: flex;
  justify-content: space-between;
  align-items: stretch;
}
/* ... */

